# agmsg

./: .gitignore  ARCHITECTURE.ja.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  README.ja.md  README.md  SKILL.md  cliff.toml  install.sh  package.json  setup.sh
.claude-plugin/: plugin.json
.github/workflows/: agmsg-router.yml  agmsg-wake.yml  tests.yml  (+1 more)
app/: README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
app/poc-inject/: Cargo.toml
app/poc-inject/src/: main.rs
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent_state.rs  agmsg.rs  lib.rs  main.rs  menu_i18n.rs  pty.rs
docs/: agent-types.md  building-on-agmsg.md  codex-monitor-beta.md  design.ja.md  design.md  plugins.ja.md  plugins.md  poc-delivery-supervisor-notes.md  remote.ja.md  remote.md  session-resurrect.md  teams.md  wake-channel.md
scripts/: actas-claim.sh  api.sh  check-inbox.sh  codex-bridge-launcher.sh  codex-monitor.sh  delivery.sh  despawn.sh  history.sh  identities.sh  inbox.sh  init-db.sh  join.sh  remote.sh  rename-team.sh  rename.sh  reset.sh  send.sh  session-start.sh  spawn.sh  status.sh  watch.sh  whoami.sh
site/: astro.config.mjs
tests/: test-idle-ttl.cjs  test-manifest-gc.cjs  test-waker-lifecycle.cjs  test_api.bats  test_app_release_signing.bats  test_bin_agmsg.bats  test_boot_command.bats  test_bump_app_version.bats  test_claude_template.bats  test_codex_bridge.bats  test_codex_bridge_launcher.bats  test_codex_monitor.bats  test_codex_resume.bats  test_codex_shim.bats  test_delivery.bats  test_despawn.bats  test_identity_path_forms.bats  test_inbox.bats  test_install.bats  test_instance_id.bats  test_messaging.bats  test_remote_sync.bats  test_resolve_project.bats  test_resurrect_panes.bats  test_role_session.bats  test_roster.bats  test_setup.bats  test_spawn.bats  test_spawn_options.bats  test_status.bats  test_storage.bats  test_storage_contract.bats  test_team.bats  test_transcript_exists.bats  test_type_registry.bats  test_watch.bats
(+117 files in other folders)
