[package]
name = "agmsg-app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agmsg_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Terminal-embedded core: own agent PTYs (spawn + read + write + inject) and
# read the agmsg SQLite DB directly for the view-only team room.
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
# PTY output is raw bytes (TUI box-drawing etc.); ship it to the webview as
# base64 so multibyte sequences split across reads render correctly in xterm.
base64 = "0.22"

[dev-dependencies]
# Fake-script harness: a temp install base of stub scripts the command layer runs.
tempfile = "3"
# The command layer reads process env (AGMSG_APP_BASE / HOME / PATH); serialize
# the tests that mutate it so they don't race under the default parallel runner.
serial_test = "3"
